New Julia settings, updates
Saving .juliarc for Julia v0.6 and startup.jl for julia > v0.7.
Updating vim bundles and adding julialang support for vim.
In .bashrc, using .., ..., etc. for cd2, cd3, etc.
Updating shortcuts to new "Google Drive" name (simply "Drive") and
adding link to Project Euler folder.
Updating PATH and adding new TMPDIR to avoid error messages, when
dealing with very long temporary file names in mac. 
Clean-up of earth0 .bashrc.
Expanded global gitignore file for mac and added filter for lfs in
gitconfig.
Trying to prevent linting in TUV folder (does not work) in .vimrc.
Updated README.

--- a/mac/.gitconfig
+++ b/mac/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	email = pb866@york.ac.uk
-	name = Peter Bräuer
+	name = Peter Bräuer
 [core]
 	excludesfile = /Users/peter/.gitignore_global
 [difftool "sourcetree"]
@@ -23,3 +23,8 @@
 	path = /Applications/kdiff3.app/Contents/MacOS/kdiff3
 [mergetool]
 	prompt = false
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
